--- a/original/Makefile
+++ b/original/Makefile
@@ -2,7 +2,7 @@ CPP = g++ -Wall
 SRCS = main.cpp fluid_solver.cpp EventManager.cpp
 
 all:
-	$(CPP) $(SRCS) -o fluid_sim
+	$(CPP) -pg -Ofast -ftree-vectorize -msse4 $(SRCS) -o fluid_sim
 
 clean:
 	@echo Cleaning up...
