--- a/versao3/Makefile
+++ b/versao3/Makefile
@@ -2,7 +2,7 @@ CPP = g++ -Wall
 SRCS = main.cpp fluid_solver.cpp EventManager.cpp
 
 all:
-	$(CPP) -pg -march=native -Ofast -ftree-vectorize -msse4 $(SRCS) -o fluid_sim
+	$(CPP) -pg -funroll-loops -march=native -Ofast -ftree-vectorize -msse4 $(SRCS) -o fluid_sim
 
 clean:
 	@echo Cleaning up...
