--- a/versao6/Makefile
+++ b/versao6/Makefile
@@ -2,7 +2,7 @@ CPP = g++ -Wall
 SRCS = main.cpp fluid_solver.cpp EventManager.cpp
 
 all:
-	$(CPP) -march=native -Ofast -funroll-loops -ffast-math -flto -fstrict-aliasing -ftree-vectorize -floop-block -fprefetch-loop-arrays $(SRCS) -o fluid_sim
+	$(CPP) -pg -march=native -Ofast -funroll-loops -ftree-vectorize -floop-block  $(SRCS) -o fluid_sim
 
 clean:
 	@echo Cleaning up...
